# AgentAI

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.json  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_callback_tasks.py  0003_knowledge_items.py  0004_admin_users.py  0005_two_factor_recovery.py  0006_auth_hardening.py  0007_callback_lifecycle.py  0008_audit_actor_user.py  0009_audio_recordings.py  0010_telephony_calls.py  0011_telephony_streams.py  0012_doctors_appointments.py  0013_notification_logs.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: clock.py  config.py  db.py  logging.py  redis.py  security.py
backend/app/eval/: harness.py  multiturn.py  run.py
backend/app/models/: __init__.py  admin_user.py  appointment.py  audio_recording.py  audit_log.py  booking.py  call.py  callback_task.py  customer.py  doctor.py  knowledge.py  knowledge_item.py  notification_log.py  telephony_call.py  telephony_stream.py  transcript.py
backend/app/schemas/: admin.py  audio.py  auth.py  booking.py  call.py  clinic.py  knowledge.py  manager.py  simulation.py  telephony.py  users.py  voice.py
backend/app/scripts/: voice_smoke_preflight.py
backend/app/services/: greeting.py  language.py
backend/app/tests/: conftest.py  test_admin_api.py  test_ai_service.py  test_appointment_sms.py  test_audit_logs.py  test_auth.py  test_auth_hardening.py  test_booking.py  test_call_session.py  test_callbacks.py  test_claude_provider.py  test_voice.py  (+24 more)
(+159 files in other folders)
