[project]
name = "ai-callcenter-backend"
version = "0.1.0"
description = "AI Voice Call-Center Agent (clinics) — backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",       # alembic (sync) uchun
    "alembic>=1.14",
    "pgvector>=0.3",
    "redis>=5.2",
    "celery>=5.4",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
]

[project.optional-dependencies]
# Real telephony / STT-TTS — wired in AFTER the text simulation works.
telephony = [
    "twilio>=9.3",
    "azure-cognitiveservices-speech>=1.41",
]
# Real STT (OpenAI Whisper) — opt-in; not needed for mock mode or tests.
stt = [
    "openai>=1.0",
]
# Real TTS (OpenAI TTS) — opt-in; same SDK as `stt`, not needed for mock/tests.
tts = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["app/tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
